# whiteboard_rs

./: Cargo.toml  Makefile
src/: main.rs
