[package]
name = "whiteboard_rs"
version = "0.1.0"
authors = ["Stephen Onnen <stephen.onnen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.3", features = ["full"] }
nats = "0.8.3"
